infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: darkiron
  labels:
    app.kubernetes.io/part-of: darkiron
